--- a/src/components/OnlineUsers.css
+++ b/src/components/OnlineUsers.css
@@ -3,7 +3,7 @@
     min-width: 250px;
     padding: 30px;
     box-sizing: border-box;
-    background: #0da483;
+    background: #adabc4;
     color: var(--heading-color);
 }
 .user-list h2 {
