--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -1,3 +1,19 @@
 .create-form {
+    margin: 50px auto;
+    margin-bottom: 120px;
     max-width: 600px;
-  }
+}
+.btngreen {
+  background: #fff;
+  margin: 1px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  color: green;
+  cursor: pointer;
+  font-size: 1em;
+  border: 1px solid green;
+}
+.btngreen:hover {
+  color: #fff;
+  background-color: green;
+}
