still trying to fix the Topics + added new 2 pages

--- a/src/components/OnlineUsers.css
+++ b/src/components/OnlineUsers.css
@@ -3,7 +3,7 @@
     min-width: 230px;
     padding: 30px;
     box-sizing: border-box;
-    background: #adabc4;
+    background: #578298;
     color: var(--heading-color);
 }
 .user-list h2 {
