--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 :root {
   --heading-color: #444;
   --text-color: #999;
-  --primary-color: #7718e2;
+  --primary-color: #c8220d;
   --highlight-color: #d13267;
   --bg-color: #f4f4f4;
 }
