--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
   margin: 0;
   font-size: 1.1em;
   background: var(--bg-color);
+  height: 100%;
 }
 ul, li, p, h1, h2, h3, h4 {
   margin: 0;
