--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,21 @@ ul {
   color: #fff;
   background-color: var(--primary-color);
 }
+.btngreen {
+  background: #fff;
+  margin: 1px;
+  padding: 8px 12px;
+  border-radius: 4px;
+  color: green;
+  cursor: pointer;
+  font-size: 1em;
+  border: 1px solid green;
+  text-decoration: none;
+}
+.btngreen:hover {
+  color: #fff;
+  background-color: green;
+}
 
 /* forms */
 label {
