--- a/src/pages/meeting/MeetingActive.css
+++ b/src/pages/meeting/MeetingActive.css
@@ -1,5 +1,61 @@
-.meeting-title h2{
+.project-active {
     display: block;
-    align-items: center;
     text-align: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 30px;
+    border: 4px solid black;
+    border-radius: 4px;
+}
+.title-time-creator {
+    border: 1px solid var(--heading-color) ;
+    border-radius: 10px;
+}
+.project-active h2 {
+    color: var(--text-color);
+    font-size: 3em;
+}
+.div1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 40px;
+}
+.project-active .div1 p {
+    margin: 10px auto;
+    font-size: 0.9em;
+    color: var(--heading-color);
+    border: 1px solid var(--heading-color) ;
+    border-radius: 10px;
+}
+.project-active .assigned-users-active {
+    display: flex;
+    margin-top: 20px;
+}
+.project-active .assigned-users-active .avatar {
+    margin-right: 10px;
+}
+.project-active .details-active {
+    border: 1px solid var(--heading-color) ;
+    border-radius: 10px;
+    margin: 30px 0;
+    color: black;
+    line-height: 1.8em;
+    font-size: 0.9em;
+}
+.project-active h4 {
+    color: var(--text-color);
+    font-size: 0.9em;
+}
+.project-active + .btn {
+    margin-top: 20px;
+}
+.div2 li {
+    border: 1px solid var(--heading-color) ;
+    border-radius: 10px;
+    margin: 20px auto;
+    text-align: left;
+    list-style-type: none;
+}
+.div2 li:after {
+    content: ":"
 }
