--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -6,12 +6,14 @@
     box-sizing: border-box;
     position: relative;
     color: #fff;
+    transition: 0.3s;
 }
 .sidebar-content {
     position: fixed;
     width: inherit;
 }
 .sidebar .user {
+    display: block;
     font-weight: bold;
     text-align: center;
     letter-spacing: 1px;
@@ -19,7 +21,7 @@
     border-bottom: 1px solid rgba(255,255,255,0.2);
 }
 .sidebar .links {
-    margin-top: 80px;
+    margin-top: 30%;
     margin-left: 20px;
 }
 .sidebar .links li {
@@ -36,12 +38,61 @@
 .sidebar .links img {
     margin-right: 10px;
     filter: invert(100%);
+    transition: 0.3s;
 }
 .sidebar .links a.active {
     color: #555;
     background: var(--bg-color);
     border-radius: 20px 0 0 20px;
+    transition: 0.3s;
 }
 .sidebar .links .active img {
     filter: invert(40%);
+}
+.menu div {
+    height: 4px;
+    background-color: white;
+    margin: 5px 0;
+    border-radius: 25px;
+    transition: 0.3s;
+}
+.menu {
+    width: 30px;
+    display: block;
+    margin: 1em 0 0 1em;
+}
+.menu .one {
+    width: 30px;
+}
+.menu .two {
+    width: 20px;
+}
+.menu .three {
+    width: 25px;
+}
+
+.menu:hover div {
+    width: 30px;
+}
+.sidebar p.close {
+    display: none;
+    /* transition: 0.3s; */
+}
+.sidebar.close {
+    width: 80px;
+    min-width: 80px;
+    background: var(--primary-color);
+    min-height: 100vh;
+    box-sizing: border-box;
+    position: relative;
+    color: #fff;
+    transition: 0.3s;
+}
+.sidebar span.close {
+    display: none;
+    transition: 0.3s;
+}
+.sidebar .user.close {
+    padding: 40px 0px;
+    border-bottom: 1px solid rgba(255,255,255,0.2);
 }
