--- a/src/pages/meeting/MeetingActive.css
+++ b/src/pages/meeting/MeetingActive.css
@@ -66,7 +66,7 @@
     border: 1px solid var(--heading-color) ;
     border-radius: 10px;
     padding: 30px;
-    background-color: aqua;
+    background-color: rgb(6, 138, 96);
     position: sticky;
     bottom: 30px;
 }
