--- a/src/pages/create/Create.css
+++ b/src/pages/create/Create.css
@@ -26,8 +26,12 @@
     font-size: 1em;
     border: 1px solid var(--primary-color);
     border-radius: 10px;
-  }
-  .btnremove:hover {
+}
+.btnremove:hover {
     color: #fff;
     background-color: var(--primary-color);
-  }
+}
+.create-form .required::after {
+    content: "*";
+    color: red;
+}
